--- a/css/principal.css
+++ b/css/principal.css
@@ -38,7 +38,7 @@ header{
 .navegacao a{
     position: relative;
     font-size: 28px;
-    color: #fff;
+    color: #f0f0f0;
     text-decoration: none;
     font-weight: 500;
     margin-left: 40px;
