--- a/css/principal.css
+++ b/css/principal.css
@@ -13,9 +13,15 @@ body{
     background-image: url(../img/proveta.jpg);
     background-repeat: no-repeat;  
     background-size: cover;
-    background-position: top;
+    background-position: top
 } /* imagem de fundo */
 
+a img {
+    margin: 20px;
+    margin-left: 165px;
+    height: 90px;
+    border-radius: 100%;
+} /* Imagem da logo */
 
 header{
     position: fixed;
