--- a/css/pagina03.css
+++ b/css/pagina03.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+}
 
 body{
     background-color: #1a1a1a;
@@ -98,4 +106,27 @@ h2 {
 
 .botoes button:hover {
     background-color: #161616ec;
+}
+
+.botoes_final {
+    display: flex;
+    justify-content: start;
+    cursor: pointer;
+}
+
+.botoes_final button{
+    height: 50px;
+    width: 200px;
+    border-radius: 13px;
+    border: none;
+    background-color: #0f0f0f;
+    color: #f0f0f0;
+    cursor: pointer;
+    font-size: 1em;
+    font-weight: 500;
+}
+
+.botoes_final button:hover {
+    background-color: #161616ec;
+
 }
