--- a/css/principal.css
+++ b/css/principal.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 *{
-    margin: 0px;
-    padding: 0px;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
     font-family: sans-serif;
 }
@@ -53,4 +55,20 @@ header{
 .navegacao :hover{
     border-radius: 10px;
     text-decoration: underline 2px;
+}
+
+
+footer {
+    height: 40px;
+    color: #fff;
+    display: flex;
+    font-size: 15px;
+    display: flex;
+    justify-content: center;
+    border-radius: 13px;
+    background-color: #1a1a1a;
+}
+
+.roda_pe h4 {
+    margin-top: 10px;
 }
