--- a/css/pagina01.css
+++ b/css/pagina01.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+/*  */
 *{
     padding: 0;
     margin: 0;
@@ -62,6 +62,8 @@ body{
 .imagem_texto img {
     height: 20%;
     width: 45%;
+    background-color: #1a1a1a;
+    border-radius: 13px;
 }
 
 .videos {
