--- a/css/sobre_mim.css
+++ b/css/sobre_mim.css
@@ -12,7 +12,6 @@ body{
     background-color: #1a1a1a;
     color: #f0f0f0;
     flex-direction: column;
-
 }
 
 .container{
@@ -20,34 +19,28 @@ body{
     background-color: #212121;
     width: 98%;
     height: 97%;
+    margin-left: 10px;
     border-radius: 13px;
-    /* align-items: center; */
-}
-
-.imagem {
-    display: flex;
-    justify-content: start;
-    margin-bottom: 30px;
-    height: 500px;
-    width: 500px;
-
 }
 
 .imagem img {
-    margin-top: 30px;
-    margin-left: 30px;
+    margin: 15px 15px ;
+    height: 600px;
+    width: 98%;
     border-radius: 13px;
 }
 
-.conteudo {
+.texto {
+    word-spacing: 3px;
     padding: 20px;
+    padding: 40px;
     white-space: 20px;
     font-size: larger;
     line-height: 1.5;
 }
 
-.conteudo h2 {  
-    text-align: center;
-    margin-bottom: 50px;
-    margin-top: 50px;
+
+.texto h3 {
+    padding-top: 40px;
 }
+
