--- a/api-site/public/dashboard/dashboards.css
+++ b/api-site/public/dashboard/dashboards.css
@@ -1,14 +1,25 @@
-/* pagina mural */
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-*,
-body {
-  font-family: 'Kalam', cursive;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
+
+body{
+  background-color: red;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+
 h4 {
   color: black;
   font-size: 27px;
   font-weight: 600;
 }
+
 .dash-right .avisos {
   width: 100%;
   /* border: 3px solid pink; */
@@ -23,6 +34,7 @@ h4 {
   flex-direction: column;
   align-items: center;
 }
+
 .avisos h1 {
   color: #0B1E38;
   -webkit-text-stroke: 1px #DB901C;
@@ -130,9 +142,6 @@ h4 {
 }
 /* pagina graficos */
 
-.dash-header {
-  background: linear-gradient(#0B1E38, #173679, #4888C8, #7FC5DC);
-}
 
 .dash {
   max-width: 80%;
@@ -275,27 +284,20 @@ h2 {
   /* height: 100vh; */
 }
 
-.header-left a {
-  text-decoration: none;
-  color: white;
-}
-
+/* DIV DO HEADER LATERAL */
 .header-left {
   position: fixed;
   top: 0;
   left: 0;
   z-index: 999;
-  height: 100vh;
+  height: 100%;
   width: 20%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  border-right: 5px solid #0B1E38;
-  background-image: url(img/calçada.jpg);
-  /* border: 3px solid pink; */
-  background-size: cover;
-  background-repeat: no-repeat;
+  border: solid, 2px;
+  border-radius: 10px ;
 }
 
 .dash-right {
@@ -309,80 +311,17 @@ h2 {
   background-repeat: no-repeat;
 }
 
-.header-left h1 {
-  border-radius: 10px;
-  color: #F7DF38;
-  background-color: rgba(46, 88 ,151 ,0.3);
-}
+/* FIM DO HEADER LATERAL */
 
-.hello {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-
-.hello h3 {
-  background-color: rgba(247,223,56,0.8);
-  color: rgb(30,34,36);
-  font-weight: 600;
-  font-size: 1.2rem;
-  font-size: 25px;
-  border-radius: 3px;
-}
-.hello h3 span {
-  font-weight: 800;
-}
-.btn-nav {
-  width: 40%;
-  color: #1E2224;
-  background-color: #F7DF38;
-  border-radius: 5px;
-  text-align: center;
-  padding: 2% 5%;
-}
-.btn-nav-white {
-  width: 40%;
-  background-color: white;
-  border: 3px solid #1E2224;
-  border-radius: 5px;
-  text-align: center;
-  padding: 2% 5%;
-  background: none;
-}
-.btn-nav-white:hover {
-  background-color: #F7DF38;
-}
-.btn-nav-white h3 {
-  color: #1E2224;
-  padding: 0;
-  margin: 0;
-}
-.btn-nav h3,
-.btn-logout h3 {
-  margin: 0;
-  padding: 0;
-}
-.btn-logout {
-  margin: 0;
-  padding: 0;
-  width: 20%;
-  background-color: #1E2224;
-  color: #D0672F;
-  border-radius: 10px;
-  text-align: center;
-  padding: 10px 15px;
-  margin-bottom: 100px;
-  cursor: pointer;
-  box-shadow: 1px 1px #D0672F;
-}
-.btn-logout:hover {
-  color: #1E2224;
-  background-color: #D0672F;
-}
 /* pagina extra - simulador */
 .simulador {
   color: white;
 }
+
+#img_fundo{
+  background-color: black;
+}
+
 #img_fundo .titulo {
   display: flex;
   justify-content: center;
@@ -391,7 +330,7 @@ h2 {
 #img_fundo .titulo h2 {
   height: 60px;
   width: 200px;
-  background-image: url(img/fundobom.png);
+  background-image: url(masp.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: #DB901C;
