tamo chegando no final uhuuuuuu

--- a/api-site/public/dashboard/dashboards.css
+++ b/api-site/public/dashboard/dashboards.css
@@ -1,97 +1,165 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+/* Paleta de cores */
+:root {
+    --blue: #164C5D;
+    --bluezinho: #859AA0;
+    --brow-primary: #271500;
+    --brown: #7F5E3A;
+    --rose: #E0CEBA;
+    --bege: #FFFAF1;
+    --white: #FFFFFF;
+    --cinza-texto: #21272A;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
 /* pagina mural */
-html{
-  background-color: #212121;
+body {background-color: #f0f0f0;
+}
+
+/* Começo da dashbord */
+#myChart {
+  width: 37.5rem;
+  border: 1px solid rgba(216, 216, 216, 0.473);
+  margin-bottom:7%;
+
+}
+
+.dash {
+  /* display: flex;
+  flex-direction: column-reverse;
+  max-width: 80%;
+  width: 60%;
+  position: absolute;
+  top: 0;
+  left: 30%;
+  background-color: red; */
+
+}
+
+#img_fundo {
+  margin: 4% 0;
+  padding: 0 6.875rem;
+  background-color: #f0f0f0;
+  border-radius: 30px;
+  height: 80vh;
+  border: 1px solid #212121;
+
+
+  display: flex;
+  flex-direction: column-reverse;
+  max-width: 80%;
+  width: 60%;
+  position: absolute;
+  top: 0;
+  left: 30%;
+}
+
+/* MENSAGENS DE ACORDO COM O RESULTADO  */
+.regua {
+  display: flex;
+  padding: 3%;
+  font-family: "Poppins", sans-serif; 
+}
+
+.item-regua {
+  text-align: center;
+  width: 60%;
+  border-radius: 13px;
+  margin-left: 20%;
+  padding: 2% 2%;
+  box-shadow: rgba(122, 151, 177, 0.548) 6px 2px 16px 0px, rgba(255, 255, 255, 0.8) -6px -2px 16px 0px;
+}
+
+#poucoacesso {
+  display: none;
+  background-color: #c63637;
+}
+
+#medioacesso {
+  display: none;
+  background-color: #ffff65;
+}
+
+#muitoacesso {
+  display: none;
+  background-color: #5CA55C;
 }
 
 
-/* NAVEGADOR LATERAL */
+
+
+
+
+
+/* NAVEGACAO LATERAL */
 .header-left {
   position: fixed;
   top: 0;
   left: 0;
   z-index: 999;
   height: 100vh;
-  width: 20%;
+  width: 23%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
+  border-right: 4px solid ;
   background-color: #212121;
-  border: solid #212121;
-  border-radius: 2px;
 }
 
-.header-left  img {
+/* LOGO */
+.janela img{ 
+  height: 150px;
+  width: 160px;
+  border: 1px solid #f0f0f0;
   border-radius: 100%;
-  border: solid 1px #f0f0f0 ;
-
 }
 
-/* Nome do Usuario */
-/* TEXTO DO ESTILO */
-.hello, .btn-nav  {
-  color: #f0f0f0;
+/* TEXTO USUARIO */
+.hello {
+  width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
-/* BOTAO DE SAIR DA DASH */
-.btn-logout {
-  cursor: pointer;
-  text-align: center;
-  height: 50px;
-  width: 200px;
-  border-radius: 13px;
-  border: none;
-  padding: 10px 15px;
-  background-color: #0f0f0f;
+.hello h3 {
   color: #f0f0f0;
-  cursor: pointer;
+  font-weight: 300; 
+  font-size: 1.2rem;
+}
+
+.hello h3 span {
+  font-weight: 800;
+}
+/* TEXTO SOBRE O QUE É ESSA DASHBORD */
+.btn-nav-white {
   font-size: 15px;
+  text-align: center;
+  color: #f0f0f0;
 }
 
-.btn-logout:hover {
+/* BOTAO DE SAIR */
+.btn-logout {
+  width: 50%;
+  height: 45px;
+  background: #0f0f0f;
+  border: none;
+  outline: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 22px;
+  color: #f0f0f0;
+  text-align: center;
+  padding: 3px;
+}
+
+.btn-logout:hover{
   background-color: #161616ec;
 }
-
-
-/* Informaçoes da dash e texto */
-.janela {
-  background-color: #f0f0f0;
-}
-
-
-/* ComeÃ§o da dashbord */
-.dash {
-  margin: 30px;
-  width: 80%;
-  height: 610px;
-  position: relative;
-  left: 20%;
-}
-
-.regua {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 35px;
-}
-
-/* MENSAGENS DE ACORDO COM O RESULTADO  */
-.item-regua {
-  display: flex;
-  text-align: center;
-  justify-content: center;
-  width: 50%;
-  height: 120px;
-  border-radius: 13px;
-}
-
-
-/*GRAFICO*/
-#myChart {
-  background-color: white;
-  color: #f1f1f1;
-  width: 20px;
-  height: 300px;
- }
-
